# Neuroflower

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  RELEASE.md  _reconstruction_impl.py  calibration.py  comparator_analysis.py  comparator_results.json  cross_condition_comparator_protocol.md  edf.py  eeg_bands.py  eeg_fmri_coupling.py  eeglab.py  hub_extraction.py  mediator.py  my_analysis.py  neuroflower_streamline_kit.py  pyproject.toml  reconstruction.py  run_locally_ica_robustness.py  test.yml  test_calibration.py  topomap.py
examples/: calibrate_example.py
neuroflower/: __init__.py
neuroflower/analysis/: __init__.py  deviation.py  eeg_fmri.py  metabolic.py  scaffold.py
neuroflower/core/: __init__.py  psd.py
neuroflower/io/: __init__.py  nifti.py
neuroflower/pipelines/: __init__.py
neuroflower/viz/: topomap_plot.py
