[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuroflower"
version = "1.0.0"
description = "Subject-specific EEG spatial calibration via multi-view mediation over an SRAM-reconstructed signed picture."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Louis Chatzicharalampous", email = "louischatzic.h@gmail.com" }
]
keywords = ["eeg", "spatial-calibration", "topomap", "neuroscience", "bci"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "numpy>=1.20",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4"]
test = ["pytest>=7.0"]
dev = ["pytest>=7.0", "matplotlib>=3.4"]

[project.urls]
Homepage = "https://github.com/<your-username>/neuroflower"
Repository = "https://github.com/<your-username>/neuroflower"
Issues = "https://github.com/<your-username>/neuroflower/issues"

[tool.setuptools.packages.find]
include = ["neuroflower*"]
exclude = ["tests*", "examples*", "play*"]
